logs/chemfp.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/chemfp'...
Compiling './lib/python3.5/site-packages/chemfp/bitops.py'...
***   File "./lib/python3.5/site-packages/chemfp/bitops.py", line 113
    except ValueError, err:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chemfp/commandline'...
Compiling './lib/python3.5/site-packages/chemfp/commandline/oe2fps.py'...
***   File "./lib/python3.5/site-packages/chemfp/commandline/oe2fps.py", line 159
    except ValueError, err:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chemfp/encodings.py'...
***   File "./lib/python3.5/site-packages/chemfp/encodings.py", line 167
    except binascii.Error, err:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chemfp/fps_io.py'...
***   File "./lib/python3.5/site-packages/chemfp/fps_io.py", line 420
    raise err[0], None, err[1]
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chemfp/futures'...
Compiling './lib/python3.5/site-packages/chemfp/io.py'...
***   File "./lib/python3.5/site-packages/chemfp/io.py", line 66
    raise ParseError(msg, location), None, None
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chemfp/pattern_fingerprinter.py'...
***   File "./lib/python3.5/site-packages/chemfp/pattern_fingerprinter.py", line 183
    except UnsupportedPatternError, err:
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chemfp/progressbar'...
Compiling './lib/python3.5/site-packages/chemfp/rdkit.py'...
***   File "./lib/python3.5/site-packages/chemfp/rdkit.py", line 439
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chemfp/types.py'...
***   File "./lib/python3.5/site-packages/chemfp/types.py", line 220
    except ValueError, err:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chemfp-1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
